--- a/index.html
+++ b/index.html
@@ -1,103 +1,117 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Amani African Market</title>
+  <meta charset="utf-8">
 
-  <meta name="referrer" content="strict-origin" />
+
+  <title>Amani African Market</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/styles.css" />
-  <noscript>
-    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
 </head>
 
+<!-- Main menu nav -->
+<div class="menu-nav">
+  <input type="checkbox" class="checkbox" id="click">
+
+  <!-- Side bar-->
+  <div class="sidebar">
+    <label for="click">
+
+      <!-- Hamburger menu -->
+      <div class="menu-burger">
+        <div class="bar bar-1"></div>
+        <div class="bar bar-2"></div>
+        <div class="bar bar-3"></div>
+      </div>
+      <ul class="social-icons">
+        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+      </ul>
+  </div>
+  </label>
+  <!-- END of hamburger menu -->
+
+  <!-- Nav Start -->
+  <nav class="main-nav-menu">
+
+    <div class="logo-2">
+      <a href="index.html"><img src="img/market-logo.png" alt="icon logo"></a>
+
+      <a href="index.html"><img src="img/market-logo.png" alt="icon logo"></a>
+
+    </div>
+
+    <!-- search Icon -->
+    <form class="navigation-search">
+      <input type="text" class="navigation" placeholder="Search...">
+      <button class="navigation-btn">
+        <i class="fas fa-search"></i>
+      </button>
+    </form>
+
+    <ul class="nav-list-menu">
+      <li class="nav-item-menu">
+        <a href="index.html" class="nav-link-menu">Home</a>
+      </li>
+      <li class="nav-item-menu">
+        <a href="#" class="nav-link-menu">Services</a>
+      </li>
+      <li class="nav-item-menu">
+        <a href="#" class="nav-link-menu">Our Team</a>
+      </li>
+      <li class="nav-item-menu">
+        <a href="about.html" class="nav-link-menu">About Us</a>
+      </li>
+      <li class="nav-item-menu">
+        <a href="#" class="nav-link-menu">Contact Us</a>
+      </li>
+
+      <!--Account Nav Start -->
+      <li class="nav-item-menu">
+        <a href="#" class="nav-link-menu nav-btn-menu">Login</a>
+      </li>
+      <li class="nav-item-menu">
+        <a href="#" class="nav-link-menu nav-btn-menu">Join</a>
+      </li>
+    </ul>
+
+  </nav>
+</div>
+<!-- END of menu-nav -->
 
 
 <header>
-  <!-- Main menu nav -->
-  <div class="menu-nav">
-    <input type="checkbox" class="checkbox" id="click">
-
-    <!-- Side bar-->
-    <div class="sidebar">
-      <label for="click">
-        <!-- Hamburger menu -->
-        <div class="menu-burger">
-          <div class="bar bar-1"></div>
-          <div class="bar bar-2"></div>
-          <div class="bar bar-3"></div>
-        </div>
-        <ul class="social-icons">
-          <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-        </ul>
-    </div>
-    </label>
-    <!-- END of hamburger menu -->
-
-    <!-- Nav Start -->
-    <nav class="main-nav-menu">
-
-      <div class="logo-2">
-        <a href="index.html"><img src="images/" alt="icon logo"></a>
-      </div>
-
-      <!-- search Icon -->
-      <form class="navigation-search">
-        <input type="text" class="navigation" placeholder="Search...">
-        <button class="navigation-btn">
-          <i class="fas fa-search"></i>
-        </button>
-      </form>
-
-      <ul class="nav-list-menu">
-        <li class="nav-item-menu">
-          <a href="index.html" class="nav-link-menu">Home</a>
-        </li>
-        <li class="nav-item-menu">
-          <a href="#" class="nav-link-menu">Services</a>
-        </li>
-        <li class="nav-item-menu">
-          <a href="#" class="nav-link-menu">Our Team</a>
-        </li>
-        <li class="nav-item-menu">
-          <a href="about.html" class="nav-link-menu">About Us</a>
-        </li>
-        <li class="nav-item-menu">
-          <a href="#" class="nav-link-menu">Blog</a>
-        </li>
-
-        <!--Account Nav Start -->
-        <li class="nav-item-menu">
-          <a href="#" class="nav-link-menu nav-btn-menu">Login</a>
-        </li>
-        <li class="nav-item-menu">
-          <a href="#" class="nav-link-menu nav-btn-menu">Join</a>
-        </li>
-      </ul>
-
-    </nav>
-  </div>
-  <!-- END of menu-nav -->
-
   <!--Logo nav-->
 
   <div class="logo">
-    <a href="index.html"><img src="images/icon.png" alt="icon logo"></a>
+    <a href="index.html"><img src="img/market-logo.png" alt="icon logo"></a>
   </div>
+
   <!-- Main Navigation -->
-  <!-- NOTE THAT FOR NAVIATION I ADDED MULTIPLE CLASSES WHICH TAKES THE ATTRIBULES OF THE CSS STYLING ACCORDINGLY -->
+  <!-- NOT THAT FOR NAVIATION I ADDED MULTIPLE CLASSES WHICH TAKES THE ATTRIBULES OF THE CSS STYLING ACCORDINGLY -->
   <nav class="main-nav">
     <ul class="nav-list">
       <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Our Team</a></li>
       <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
     </ul>
   </nav>
 
@@ -117,27 +131,27 @@
     </ul>
   </nav>
 
-  <!-- wraps whole page -->
-  <div id="wrapper">
-    <!--Name of page-->
-    <section class="main-name">
-      <div class="topia">
-        <h1>Amani African Market</h1>
-      </div>
-
-      <div class="Chefs-Recipes-1">
-        <p class="chefs">African Market</p>
-      </div>
-    </section>
 </header>
+<!-- wraps whole page -->
+<div id="wrapper">
+  <!--Name of page-->
+  <section class="main-name">
+    <div class="trop">
+      <h1>Amani </h1>
+    </div>
 
-
-<body>
+    <div class="afri-mark-1">
+      <p class="afri">African Market</p>
+    </div>
+  </section>
   <!--Content under picture-->
   <div class="home-about">
-    <p class="p1">Sed nisl tortor, feugiat dictum augue ut, molestie volutpat magna. Aliquam gravida aliquet ligula nec
-      pulvinar. Aenean laoreet sed tortor in finibus. In nec justo tincidunt, rhoncus lacus non, elementum mi. Donec
-      ultricies scelerisque tempor.</p>
+    <p class="p1"><span>Vulputate</span> Donec ultrices tincidunt arcu non sodales neque sodales ut etiam. Potenti
+      nullam ac tortor vitae purus faucibus ornare
+      suspendisse sed. Arcu cursus vitae congue mauris. Vulputate dignissim suspendisse in est. Ante metus dictum at
+      tempor
+      commodo. Ac tortor dignissim convallis aenean et tortor at. Amet dictum sit amet justo donec enim. In nibh
+      <span>Non pulvinar</span></p>
   </div>
 
   <div class="band">
@@ -149,8 +163,76 @@
 
   <div class="categories">
 
+    <section class="main-content">
+      <div class="inner-content inner">
+        <h2 class="our-service high">Our Service</h2>
+        <p>Nunc tincidunt arcu mi, a sagittis turpis aliquet nec. Morbi sed odio lacus. Integer consequat neque non
+          sapien tristique, eget faucibus turpis volutpat. Pellentesque vestibulum nunc tortor, in volutpat neque congue
+          a. Phasellus mattis nisl tellus, nec tristique odio tincidunt eget. Donec eleifend lorem ante. Integer finibus
+          finibus odio vitae semper.</p>
+        <img class="exchange img" src="img/exchange.jpg" alt="ladies exchanging services">
+      </div>
+
+      <div class="inner-content2 inner">
+        <h2 class="our-impact high">Our Impact</h2>
+        <p>Nunc tincidunt arcu mi, a sagittis turpis aliquet nec. Morbi sed odio lacus. Integer consequat neque non
+          sapien tristique, eget faucibus turpis volutpat. Pellentesque vestibulum nunc tortor, in volutpat neque
+          congue
+          a. Phasellus mattis nisl tellus, nec tristique odio tincidunt eget. Donec eleifend lorem ante. Integer
+          finibus
+          finibus odio vitae semper.</p>
+        <img class="produce img" src="img/market-view.jpg" alt="assortment of produce">
+      </div>
+
+      <div class="inner-content3 inner">
+        <h2 class="our-target high">Our Target</h2>
+        <p>Nunc tincidunt arcu mi, a sagittis turpis aliquet nec. Morbi sed odio lacus. Integer consequat neque non
+          sapien tristique, eget faucibus turpis volutpat. Pellentesque vestibulum nunc tortor, in volutpat neque
+          congue
+          a. Phasellus mattis nisl tellus, nec tristique odio tincidunt eget. Donec eleifend lorem ante. Integer
+          finibus
+          finibus odio vitae semper.</p>
+        <img class="stand img" src="img/market-lady2.jpg" alt="lady at market stand">
+      </div>
 
 
-</body>
+      <div class="inner-content4 inner">
+        <h2 class="our-goal high">Our Goal</h2>
+        <p>Nunc tincidunt arcu mi, a sagittis turpis aliquet nec. Morbi sed odio lacus. Integer consequat neque non
+          sapien tristique, eget faucibus turpis volutpat. Pellentesque vestibulum nunc tortor, in volutpat neque
+          congue
+          a. Phasellus mattis nisl tellus, nec tristique odio tincidunt eget. Donec eleifend lorem ante. Integer
+          finibus
+          finibus odio vitae semper.</p>
+        <img class="veggies img" src="img/market.jpg" alt="assortment of veggies">
+      </div>
+
+    </section>
+
+
+    <footer class="foot-content">
+
+
+      <ul class="icons">
+        <h3>Follow Us</h3>
+        <a href="#">
+          <li class="fab fa-twitter"></li>
+        </a>
+        <a href="#">
+          <li class="fab fa-facebook"></li>
+        </a>
+        <a href="#">
+          <li class="fab fa-instagram"></li>
+        </a>
+
+        <a href="#">
+          <li class="fab fa-youtube"></li>
+        </a>
+        <p>&copy; Build Week African Market Team and Affiliates</p>
+
+      </ul>
+
+
+    </footer>
 
 </html>
